examples/errors/repeat_requires_init.ail
const B = 2
const D = 4

model {
  x [B, D]
  param W [D, 1]
  y = repeat 3 times do matmul(x, W) end
}
